--- a/styles/Heading.module.css
+++ b/styles/Heading.module.css
@@ -1,5 +1,5 @@
 .title {
   font-size: 30px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   font-weight: 600;
 }
